@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.4 2004/12/12 05:49:07 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.5 2004/12/12 21:45:55 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  12 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
+  Completed rough working NetworkMounts screen: adds/removes/updates entries
+  and saves to/reads from install profile.
 
   11 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Initial ChangeLog commit. Added set_size_request() call in gtkfe.py so the
